Text erbij Nathan

--- a/Portfolio-Nathan-van-der-Veer.html
+++ b/Portfolio-Nathan-van-der-Veer.html
@@ -72,21 +72,10 @@
                             <p>
                                 Student: Nathan van der Veer
                                 Studentennummer: 
-                                Bachelor: 
+                                Bachelor: Werktuigbouwkunde
                                 Minor: Smart Industry
                             </p>
                         </div>
-                    </div>
-                    <div class="box-upperimg">
-                            <a href="images/wait_a_minute.jpg">
-                                <img src="images/wait_a_minute.jpg" alt="Kleurentest" height="200px" width="400px">
-                            </a>
-                        <h6>Kleurentest</h6>
-                        <blockquote>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
-                            </p>
-                        </blockquote>
                     </div>
                 </div>
             </div>
@@ -154,10 +143,91 @@
             <h1>Workshops</h1>
             <section id="workshops-smart-me">
                 <h3>Smart me</h3>
+
                 <div class="content"></div>
             </section>
             <section id="workshops-smart-business">
                 <h3>Smart business</h3>
+                    <div class="content">
+                        <div class="column-content">
+                            <div class="box-onlytext">
+                                <h6>Industrie 4.0</h6>
+                                <blockquote>
+                                    <p> 
+                                    Industrie 4.0 gaat over de 4e industriële revolutie waarbij de volgende stap wordt gemaakt in automatisering door communicatie & verbindingen. Waarbij robots en andere technologieën met elkaar kunnen gaan communiceren om slim interactie uit te voeren de omgeving en verschillende systemen.                                
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-onlytext">
+                                <h6>Innovatie</h6>
+                                <blockquote>
+                                    <p>
+                                    Wat mij inspireerde aan de presentatie over Innovatie is dat: Ten opzichte van een gevestigd bedrijf waarin de producten vaak moeten passen in het bestaande bedrijfsproces. Er wordt dan ontwikkeld vanuit ontwerp oplossingen. Bij innovatie is dit vaak juist andersom er wordt gekeken welke nieuwe technieken gebruikt kunnen worden om iets nieuws te ondernemen. 
+                                    Een bedrijf moet dan juist terug begeleid worden uit hun gevestigde productie methode tot een agile proces om weer te kunnen innoveren. Het is op dat niveau mogelijk om geheel nieuwe ontwikkelingen te doen vrij van veel procesmatige limitaties. 
+                                    <br><br>
+                                    Vergelijkenis van de “speedboot” t.o.v. olietanker.
+                                    <br><br>
+                                    Vaak ben ik vanuit de WTB betrokken bij projecten waarbij gewerkt wordt aan een nieuw product waarvoor een productie proces moet worden opgezet. Hierbij is het voor mij als WTB belangrijk om te leren een bedrijf hierbij te kunnen begeleiden, door een proces te doorlopen terug naar de idee fase door middel van verkenning traject. 
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-upperimg">
+                                <a href="images/NathanVdV/Caluwe kleurgedoe.PNG">
+                                    <img src="images/NathanVdV/Caluwe kleurgedoe.PNG" alt="Kleurentest" width="95%" aspect-ratio="2/3">
+                                </a>
+                                <h6>Value proposition Canvas</h6>
+                                <blockquote>
+                                    <p>
+                                    hoi
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-upperimg">
+                                <a href="images/NathanVdV/Caluwe kleurgedoe.PNG">
+                                    <img src="images/NathanVdV/Caluwe kleurgedoe.PNG" alt="Kleurentest" width="95%" aspect-ratio="2/3">
+                                </a>
+                                <h6>BMC AXA casus</h6>
+                                <blockquote>
+                                    <p>
+                                    Axa
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-upperimg">
+                                <a href="images/NathanVdV/Caluwe kleurgedoe.PNG">
+                                    <img src="images/NathanVdV/Caluwe kleurgedoe.PNG" alt="Kleurentest" width="95%" aspect-ratio="2/3">
+                                </a>
+                                <h6>Bezoek ELK</h6>
+                                <blockquote>
+                                    <p>
+                                    elk
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-upperimg">
+                                <a href="images/NathanVdV/Caluwe kleurgedoe.PNG">
+                                    <img src="images/NathanVdV/Caluwe kleurgedoe.PNG" alt="Kleurentest" width="95%" aspect-ratio="2/3">
+                                </a>
+                                <h6>TOM-model</h6>
+                                <blockquote>
+                                    <p>
+                                    Axa
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="box-upperimg">
+                                <a href="images/NathanVdV/Caluwe kleurgedoe.PNG">
+                                    <img src="images/NathanVdV/Caluwe kleurgedoe.PNG" alt="Kleurentest" width="95%" aspect-ratio="2/3">
+                                </a>
+                            <h6>Kleurentest</h6>
+                            <blockquote>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
                 <div class="content"></div>
             </section>
             <section id="workshops-smart-technology">
@@ -166,8 +236,10 @@
             </section>
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
+                <div class="content">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2n2rMWe3bQvS6yCFPHjWsD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    
+                </div>
                 <div class="content"></div>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2n2rMWe3bQvS6yCFPHjWsD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </section>
         </section>
         <section id="Eyeopeners">
