Connection bijgewerkt en afbeelding swot analyse toegevoegd

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -140,16 +140,37 @@
                         </blockquote>
                     </div>
                     <div class="box-lowerimg">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/bgJ_1WuhUig?si=epCKUhnPRq25SALO"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <a href="images/CamielN/swot_analyse.png">
+                            <img src="images/CamielN/swot_analyse.png" alt="SWOT-analyse" height="500px" width="900px">
+                        </a>
                         <h6>Leerdoel 2</h6>
                         <blockquote>
                             <p>
-                                Ik wil meer te weten komen over de processen die spelen binnen een bedrijf buitenom het
-                                ontwikkelen van een applicatie.
+                                "Ik wil meer te weten komen over de processen die spelen binnen een bedrijf buitenom het
+                                ontwikkelen van een applicatie."
+                                <br><br>
+                                Zoals ik al eerder in de “about me” sectie heb verteld heb ik deze minor gekozen omdat
+                                ik graag zou willen weten wat er precies speelt naast de rol die ik vervul bij het
+                                uitvoeren van een project. Mijn rol betreft namelijk vooral uitzoeken of iets technisch
+                                haalbaar is. Bijvoorbeeld bij het onderzoeken welke sensor het meest geschikt zou zijn
+                                zou ik prijs en oorsprong van de leverancier wel meenemen, maar meer dan dat ook niet.
+                                <br><br>
+                                Ik was de eerste helft van de minor niet bepaald actief bezig met dit leerdoel. Ik ben
+                                hier onbewust wel bezig mee geweest bij bijvoorbeeld de workshop van AxA waarbij we een
+                                BMC moesten maken van het bedrijf en kregen we vervolgens de opdracht om het bedrijf te
+                                helpen met een smart industry oplossing om het winstgevender te maken. Hoewel ik het wel
+                                interessant vond om hiermee te werken had ik er nog niet echt op gereflecteerd. Totdat
+                                Nena mij tijdens het feedback moment aangaf dat ik tijdens het uitvoeren van het project
+                                voor Impact Smart Solutions nog niet echt gewerkt had aan de economische vraagstukken.
+                                Toen ik hier eenmaal bewust van was heb ik de kennis die ik opgedaan had uit de workshop
+                                gaan toepassen door het BMC voor Impact Smart Solutions bij te werken met de
+                                veranderingen die onze oplossing met zich mee zou brengen. Daarnaast heb ik met hulp van
+                                Nena ook een SWOT-analyse opgesteld waarin verwerkt staat hoe de sterktes van het
+                                bedrijf gebruikt konden worden en de bedreigingen verholpen kunnen worden. Dit vond ik
+                                een erg fijne methode en ik ben van plan dit ook op te nemen bij het PVA van een volgend
+                                project. Dit zou namelijk ook kunnen gelden om de krachten en zwakten van een
+                                projectgroep in kaart te brengen.
+
                             </p>
                         </blockquote>
                     </div>
@@ -199,12 +220,47 @@
             </section>
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
-                <iframe style="border-radius:12px"
-                    src="https://open.spotify.com/embed/playlist/0yJRqj1i3BErDy4F44xrlr?utm_source=generator"
-                    width="100%" height="352" frameBorder="0" allowfullscreen=""
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                    loading="lazy"></iframe>
-                <div class="content"></div>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Artificial Intelligence</h6>
+                            <blockquote>
+                                <p>
+                                    Test
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-onlytext">
+                            <h6>Website en API</h6>
+                            <blockquote>
+                                <p>
+                                    De andere set aan workshops voor het onderdeel connection bestond uit 2 workshops
+                                    over het creëren van een website en 1 workshop over api's. Deze workshops waren
+                                    helaas wat minder interessant voor mij aangezien ik in de propedeuse al uitgebreid
+                                    les hierover gehad heb (ik heb toen een blogpagina gemaakt m.b.v html, css en php
+                                    met een werkend accountsysteem). Aangezien ik al wat ervaring ermee had en in het
+                                    algemeen niet geïnteresseerd ben in webdevelopment ben ik gewoon zelf aan de slag
+                                    gegaan. Tijdens de les benoemde Hubert kort dat je natuurlijk ook met bootstrap kan
+                                    werken en aangezien mijn design skills niet als te best zijn klonk dat wel
+                                    interessant. Na rondgespeelt te hebben met bootstrap ga ik dit zeker meenemen de
+                                    volgende keer dat ik een simpel interface nodig heb. Bijvoorbeeld als ik gewoon wat
+                                    simpele knoppen nodig heb om een controller te bedienen is het een makkelijke manier
+                                    om alsnog de pagina wat beter eruit te laten zien zonder dat ik uren bezig hoef te
+                                    zijn met css. Daarnaast hebben we nog wat uitleg gekregen over de werking van api’s,
+                                    ik besloot hierbij gelijk bezig te gaan met de spotify api om live als ik muziek aan
+                                    het afspelen ben dit weer te geven. Helaas kwam ik er al snel achter dat ik hiermee
+                                    mijn eigen inloggegevens en apikey van mijn spotify moest meecomitten dus heb ik
+                                    ervoor gekozen om een playlist te embedden zoals hieronder zichtbaar is.
+                                </p>
+                            </blockquote>
+                            <iframe style="border-radius:12px"
+                                src="https://open.spotify.com/embed/playlist/3I6rT2eu65EtqgEePYBLPP?utm_source=generator&theme=0"
+                                width="100%" height="352" frameBorder="0" allowfullscreen=""
+                                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                loading="lazy"></iframe>
+                        </div>
+                    </div>
+                </div>
             </section>
         </section>
     </div>
