Toegevoegd smart connection

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -222,11 +222,39 @@
                 <h3>Smart connection</h3>
                 <div class="content">
                     <div class="column-content">
-                        <div class="box-onlytext">
+                        <div class="box-lowerimg">
+                            <a href="images/CamielN/machine_learning_canvas.jpg">
+                                <img src="images/CamielN/machine_learning_canvas.jpg" alt="SWOT-analyse" height="700px"
+                                    width="900px">
+                            </a>
                             <h6>Artificial Intelligence</h6>
                             <blockquote>
                                 <p>
-                                    Test
+                                    Tijdens de course artificial intelligence hebben we de geschiedenis van AI,
+                                    verschillen tussen types AI, precieze werking van deze types en toepassingen van AI
+                                    toegelicht gekregen. Ik vond dit persoonlijk erg interressant aangezien ik in mijn
+                                    vrije tijd vaak videos kijk over dit topic. Tijdens mijn studie werd dit topic vrij
+                                    weinig behandeld en kwam het vooral neer op simpele algoritmes terwijl we juist
+                                    opdrachten hebben gekregen waarbij een complexer deep learning model eigenlijk beter
+                                    zou passen (bijvoorbeeld toen we met een camera een mok moesten herkennen in een
+                                    omgeving). Helaas waren er niet genoeg lessen om daadwerkelijk een machine learning
+                                    algoritme op te zetten. Desalniettemin heb ik toch veel geleerd en kan ik bij een
+                                    volgende opdracht een goede inschatting maken wat voor soort machine learning
+                                    algoritme ik kan gebruiken. Bijvoorbeeld:
+                                    <br><br>
+                                    • Bij een simulatie van verkeersstromen weet ik dat ik Cellular Automata moet
+                                    gebruiken
+                                    <br><br>
+                                    • Bij een zeer specifiek en snel veranderend probleem met vage oplossingsideeën weet
+                                    ik dat ik een genetisch algoritme moet gebruiken.
+                                    <br><br>
+                                    • Bij een optimalisatieprobleem die waanzinnige hoeveelheden geheugen of tijd vergt
+                                    om de oplossing te vinden (NP-hard) weet ik dat ik Swarm Intelligence moet
+                                    gebruiken.
+                                    <br><br>
+                                    Daarnaast weet ik nu dat als ik dit wil implementeren dat ik gebruik moet maken van
+                                    het machine learning canvas om de requirements, kosten en bottlenecks in kaart te
+                                    brengen.
                                 </p>
                             </blockquote>
                         </div>
@@ -255,7 +283,7 @@
                             </blockquote>
                             <iframe style="border-radius:12px"
                                 src="https://open.spotify.com/embed/playlist/3I6rT2eu65EtqgEePYBLPP?utm_source=generator&theme=0"
-                                width="100%" height="352" frameBorder="0" allowfullscreen=""
+                                width="600px" height="352px" frameBorder="0" allowfullscreen=""
                                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                                 loading="lazy"></iframe>
                         </div>
