--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -212,11 +212,62 @@
             </section>
             <section id="workshops-smart-business">
                 <h3>Smart business</h3>
-                <div class="content"></div>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Waardepropositie en Waarderealisatie</h6>
+                        </div>
+                        <div class="box-onlytext">
+                            <h6>Elk</h6>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="workshops-smart-technology">
                 <h3>Smart technology</h3>
-                <div class="content"></div>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Internet of Things</h6>
+                            <blockquote>
+                                <p>
+                                    Voor Internet of Things was het doel om IoT-schakeling te bouwen voor het
+                                    automatiseren van de lichtintensiteit en aarde-vochtigheid van een plant. Deze
+                                    opstelling moet ik vervolgens samen met mijn projectgenoten presenteren bij het
+                                    eindseminar. Tijdens de lessen hebben we uitleg gekregen over de werking van de
+                                    hardware, hoe je de IDE opzet en hoe je moet programmeren. Dit was voor mij allemaal
+                                    relatief simpel, maar gezien mijn achtergrond kan dat ook niet anders. Toch vond ik
+                                    het alsnog leuk om mijzelf uit te dagen de code zo schoon mogelijk op te stellen en
+                                    als ik kijk naar het eindresultaat ben ik redelijk tevreden. Wat voor mij relatief
+                                    nieuw was betrefde het ontwerpen van een pcb zodat er niet allemaal losse draden
+                                    binnen de plantenbak lopen. Vanuit mijn opleiding heb ik geleerd om Kicad (een open
+                                    source alternatief op Eagle) te gebruiken om aansluitingen van een prototype in
+                                    kaart te brengen. Normaal gesproken deed ik dit om aansluitingen vast te leggen
+                                    zodat als een prototype een keer uit elkaar valt of het opnieuw opgebouwd moet
+                                    worden je precies weet wat waarop aangesloten moet worden. Maar ik heb nog nooit
+                                    daadwerkelijk een pcb ontworpen op basis van het aansluitschema.
+                                    Nadat we het pcb ontvangen hadden mochten we zelf de headers erop solderen. Dit was
+                                    zeker leerzaam want ik zou dit origineel ook gehad hebben tijdens mijn opleiding,
+                                    maar door corona is dit toentertijd niet doorgegaan. Ik vond dit zo leuk dat ik het
+                                    toevallig bij een bedrijf opgebracht heb waar ik stage ga lopen (Teneo) en de
+                                    electrical engineers daar maakten ook gebruik van Eagle. Toen kreeg ik ook te horen
+                                    dat het zeker mogelijk was om een pcb te ontwerpen voor het prototype waar ik
+                                    zodadelijk aan ga werken. Dus hoewel ik de kennis die werd toegelicht tijdens deze
+                                    workshop al beheerste heb ik voor mijzelf er alsnog veel uitgehaald. De plantenbak
+                                    is hieronder te zien:
+                                </p>
+                            </blockquote>
+                        </div>
+                        <div class="box-onlytext">
+                            <h6>Additive manufacturing</h6>
+                            <blockquote>
+                                <p>
+
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="workshops-smart-connection">
                 <h3>Smart connection</h3>
