Toegevoegd afbeelding en tekst IOT

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -227,7 +227,11 @@
                 <h3>Smart technology</h3>
                 <div class="content">
                     <div class="column-content">
-                        <div class="box-onlytext">
+                        <div class="box-lowerimg">
+                            <video width="960" height="540" controls>
+                                <source src="videos/CamielN/planten_bak.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                             <h6>Internet of Things</h6>
                             <blockquote>
                                 <p>
@@ -258,11 +262,47 @@
                                 </p>
                             </blockquote>
                         </div>
-                        <div class="box-onlytext">
+                        <div class="box-lowerimg">
+                            <a href="images/CamielN/solid_works.jpg">
+                                <img src="images/CamielN/solid_works.jpg" alt="solid_works_bakje"
+                                    height="700px" width="900px">
+                            </a>
                             <h6>Additive manufacturing</h6>
                             <blockquote>
                                 <p>
-
+                                    Bij additive manufacturing was de uiteindelijke opdracht om een behuizing te
+                                    ontwerpen m.b.v solidworks voor de IoT-schakeling. Tijdens de lessen hebben we
+                                    voornamelijk uitleg gekregen over de soorten additive manufacturing, voor- en
+                                    nadelen van additive manufacturing t.o.v traditionele manieren en hoe je met
+                                    solidworks moet omgaan. Daarnaast kregen we bij het fablab ook uitleg hoe je met
+                                    Cura overweg moet gaan om te zorgen dat je print ook daadwerkelijk succesvol geprint
+                                    kan worden. Bij de eerste les hebben we vooral een introductie gekregen van de
+                                    verschillende soorten additive manufacturing met als huiswerk om de solidworks
+                                    tutorial te volgen en een presentatie voor te bereiden over een van de type
+                                    voordelen. Deze presentatie heb ik vervolgens samen gemaakt met Nena en Nathan. Ons
+                                    voordeel was complexiteit en performance en hiervoor heb ik een voorbeeld gevonden
+                                    van een dakbeugel van een BMW die door Selective Laser Melting (SLM) tot wel 44%
+                                    lichter was dan de vorige versie wat bij auto’s natuurlijk erg belangrijk is. In de
+                                    volgende les hebben we dit samen gepresenteerd met andere groepen en kregen wij van
+                                    Harold (de persoon die de workshop gaf) nog wat meer uitleg over de nadelen. De rest
+                                    van de lessen waren meer gefocust op het ontwerpen van het “bakje”. Hierbij had ik
+                                    wel meer moeite dan gedacht en dus besloot ik om het bakje zo simpel mogelijk te
+                                    houden. Toen Nathan (die vanuit werktuigbouwkunde hier meer ervaring mee heeft) naar
+                                    mijn “bakje” vroeg gaf ik het aan dat ik het op had gegeven om het uit te breiden
+                                    zoals ik het origineel in gedachte had. Hij heeft toen aangeboden om mij hiermee te
+                                    helpen en uiteindelijk is het toch gelukt om mijn originele plan te verwezenlijken.
+                                    <br><br>
+                                    Qua inhoud heb ik veel kennis opgedaan en toegepast die kan helpen bij het
+                                    prototypen. In de vorige helft van mijn leerjaar heb ik bijvoorbeeld gewerkt aan een
+                                    autonome robot waarbij andere klasgenoten toen de sensoren los zaten deze beter
+                                    wisten te mounten door een beugel te ontwerpen en uit te printen. Nu ik deze kennis
+                                    beheer kan ik bij een volgende prototyping opdracht als dat nodig is hierbij ook
+                                    helpen. En daarnaast ben ik van plan een beugel te ontwerpen zodat mijn ssd die ik
+                                    met usb verbind aan mijn laptop beter vast kan zetten.
+                                    <br><br>
+                                    Als laatst heb ik ook een leermoment gehad op proces niveau namelijk dat als ik
+                                    ergens vastloop waar iemand vanuit een andere richting veel meer over weet ik niet
+                                    bang moet zijn om hulp te vragen.
                                 </p>
                             </blockquote>
                         </div>
@@ -275,8 +315,8 @@
                     <div class="column-content">
                         <div class="box-lowerimg">
                             <a href="images/CamielN/machine_learning_canvas.jpg">
-                                <img src="images/CamielN/machine_learning_canvas.jpg" alt="SWOT-analyse" height="700px"
-                                    width="900px">
+                                <img src="images/CamielN/machine_learning_canvas.jpg" alt="machine_learning_canvas"
+                                    height="700px" width="900px">
                             </a>
                             <h6>Artificial Intelligence</h6>
                             <blockquote>
