Toegevoegd bmc en waardepropositie

--- a/Portfolio-Camiel-Nijman.html
+++ b/Portfolio-Camiel-Nijman.html
@@ -214,8 +214,41 @@
                 <h3>Smart business</h3>
                 <div class="content">
                     <div class="column-content">
+                        <div class="box-lowerimg">
+                            <a href="images/CamielN/business_model_canvas.jpg">
+                                <img src="images/CamielN/business_model_canvas.jpg" alt="business_model_canvas" height="700px"
+                                    width="900px">
+                            </a>
+                            <h6>Waardepropositie</h6>
+                            <blockquote>
+                                <p>
+                                    Voor de business workshops hebben we een aantal onderwerpen besproken waaronder
+                                    Waardepropositie en waarderealisatie. Allereerst hebben we een workshop gekregen van
+                                    Geert Rensen waarin ik samen met een willekeurig gekozen groep een Business Model
+                                    Canvas op heb moeten stellen voor het bedrijf AXA. Dit is een echte casus die Geert
+                                    heeft uit moeten voeren. Het Turkse bedrijf biedt diverse verzekeringen aan,
+                                    waaronder levens-, schade-, inkomens- en pensioenverzekeringen. Hun probleem was dat
+                                    door sterke concurrentie de WA-verzekeringen verliesgevend werden, maar alsnog wou
+                                    het actief blijven in de automarkt omdat dit basisverzekeringen voor andere
+                                    producten zijn. Vervolgens kregen wij de taak om een slimme oplossing te bedenken en
+                                    het effect ervan in het BMC op te nemen. Onze slimme oplossing was om een
+                                    beloningsysteem te implementeren die werkte door middel van een app. Hierbij werd je
+                                    beloont op je premie als je extra cursussen volgde via de app om beter rijden te
+                                    bevorderen. Dit kon vervolgens ook weer gebruikt worden om data te verzamelen over
+                                    de kennis van gebruikers in bepaalde gebieden om een map te creëren van welke
+                                    plaatsen mensen het veiligste rijden. Ik kwam deels op dit idee omdat ik dit vaak
+                                    zag in advertenties voor zorgverzekeringen die ook werkte met een beloningsysteem.
+                                    Vervolgens hebben we dit idee gepresenteerd aan de rest van de klas.
+                                </p>
+                            </blockquote>
+                        </div>
                         <div class="box-onlytext">
-                            <h6>Waardepropositie en Waarderealisatie</h6>
+                            <h6>waarderealisatie</h6>
+                            <blockquote>
+                                <p>
+                                    
+                                </p>
+                            </blockquote>
                         </div>
                         <div class="box-onlytext">
                             <h6>Elk</h6>
@@ -380,9 +413,8 @@
                             <h6>NASA Astronomy Picture of the Day</h6>
                             <h6 class="apod">
                                 <h6 id="title"></h6>
-                                <img id="image" src="" alt="Astronomy Picture of the Day">
+                                <img id="image" src="" alt="Astronomy Picture of the Day" height="300px" width="300px">
                             </h6>
-
                             <script>
                                 const apiKey = 'HmsYrfrpyMrkQrQUEjON7iJFusz24vP9r72Xw6BK';
                                 const apiUrl = `https://api.nasa.gov/planetary/apod?api_key=${apiKey}`;
